--- a/University of advancing techonology/admissions.html
+++ b/University of advancing techonology/admissions.html
@@ -29,7 +29,7 @@
         <img class="logo-img" src="./uat-logo.png" alt="align box" />
       </div>
       <ul class="ul1">
-        <li><a href="/">Home</a></li>
+        <li><a href="index.html">Home</a></li>
         <li><a href="join-us.html">Join Us</a></li>
         <li><a href="admissions.html">Admissions</a></li>
         <li><a href="studies.html">Studies</a></li>
