info om studies ferdig

--- a/University of advancing techonology/studies.html
+++ b/University of advancing techonology/studies.html
@@ -36,5 +36,97 @@
         <li><a href="about.html">About</a></li>
       </ul>
     </nav>
+
+      <div class="studies-main">
+      <div class="ourstudy">
+        <h1> Our Studies</h2> 
+      </div>
+      <nav class="nav-studies">
+        <ul>
+          <li> Math</li>
+        </ul>
+      </nav>
+      <div class="head-study">
+       <h2> Math </h2>
+      </div>
+      <div class="study-text">
+       <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Corrupti, maiores asperiores illum et explicabo praesentium in placeat totam quas dicta laboriosam omnis voluptas ab quia commodi autem! Nisi, dolorum odio.</p>
+      <img class="photo-study" src="https://images.unsplash.com/photo-1596496181871-9681eacf9764?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=2264&q=80">
+      </div>
+      <div class="head-study">
+      <h2> Information Techonology</h2>
+    </div>
+      <div class="study-text">
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Similique quam temporibus, esse earum ipsam dolorem magnam, unde aut atque quidem, vitae hic architecto excepturi culpa possimus perspiciatis mollitia exercitationem delectus!</p>
+       <img class="photo-study" src="https://images.unsplash.com/photo-1498050108023-c5249f4df085?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=2252&q=80">
+      </div>
+      <div class="head-study">
+      <h2> Science</h2>
+    </div>
+      <div class="study-text">
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Similique quam temporibus, esse earum ipsam dolorem magnam, unde aut atque quidem, vitae hic architecto excepturi culpa possimus perspiciatis mollitia exercitationem delectus!</p>
+       <img class="photo-study" src="https://images.unsplash.com/photo-1574170609519-d1d8d4b71f60?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=2250&q=80">
+      </div>
+      <div class="head-study">
+      <h2>Economics</h2>
+    </div>
+      <div class="study-text">
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Similique quam temporibus, esse earum ipsam dolorem magnam, unde aut atque quidem, vitae hic architecto excepturi culpa possimus perspiciatis mollitia exercitationem delectus!</p>
+       <img class="photo-study" src="https://images.unsplash.com/photo-1535320903710-d993d3d77d29?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=2250&q=80">
+      </div>
+      <div class="head-study">
+       <h2>Physics</h2>
+      </div>
+       <div class="study-text">
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Similique quam temporibus, esse earum ipsam dolorem magnam, unde aut atque quidem, vitae hic architecto excepturi culpa possimus perspiciatis mollitia exercitationem delectus!</p>
+       <img class="photo-study" src="https://images.unsplash.com/photo-1453733190371-0a9bedd82893?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=3134&q=80">
+      </div>
+      <div class="head-study">
+      <h2>Medicine</h2>
+    </div>
+      <div class="study-text">
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Similique quam temporibus, esse earum ipsam dolorem magnam, unde aut atque quidem, vitae hic architecto excepturi culpa possimus perspiciatis mollitia exercitationem delectus!</p>
+        <img class="photo-study" src="https://images.unsplash.com/photo-1542736667-069246bdbc6d?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=2102&q=80">
+      </div>
+      <div class="head-study">
+      <h2>Data Science</h2>
+    </div>
+      <div class="study-text">
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Similique quam temporibus, esse earum ipsam dolorem magnam, unde aut atque quidem, vitae hic architecto excepturi culpa possimus perspiciatis mollitia exercitationem delectus!</p>
+        <img class="photo-study" src="https://images.unsplash.com/photo-1487058792275-0ad4aaf24ca7?ixlib=rb-1.2.1&auto=format&fit=crop&w=2250&q=80">
+      </div>
+      <div class="head-study">
+      <h2>Artificial Intelligence</h2>
+    </div>
+      <div class="study-text">
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Similique quam temporibus, esse earum ipsam dolorem magnam, unde aut atque quidem, vitae hic architecto excepturi culpa possimus perspiciatis mollitia exercitationem delectus!</p>
+        <img class="photo-study" src="https://images.unsplash.com/photo-1531747118685-ca8fa6e08806?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1884&q=80">
+      </div>
+    </div>
+
+    <footer>
+      <div class="infofooter">
+        <div>Request info</div>
+        <br />
+        <div>(800) 658-5744</div>
+        <br />
+        <div><a href="admissions.html">Apply to UAT</a></div>
+        <br />
+      </div>
+      <div class="some">
+        <a href="https://www.facebook.com/" target="_blank">
+          <i class="fab fa-facebook"></i
+        ></a>
+        <a href="https://twitter.com/twitter" target="_blank"
+          ><i class="fab fa-twitter"></i
+        ></a>
+        <a href="https://www.instagram.com" target="_blank"
+          ><i class="fab fa-instagram"></i
+        ></a>
+        <a href="https://www.youtube.com" target="_blank"
+          ><i class="fab fa-youtube"></i
+        ></a>
+      </div>
+    </footer>
   </body>
 </html>
