--- a/University of advancing techonology/about.html
+++ b/University of advancing techonology/about.html
@@ -31,10 +31,10 @@
       <ul class="ul1">
         <li><a href="index.html">Home</a></li>
         <li><a href="join-us.html">Join Us</a></li>
-        <li><a href="admissions.html">Admissions</a></li>
         <li><a href="studies.html">Studies</a></li>
         <li><a href="about.html">About</a></li>
       </ul>
     </nav>
+    <div class=></div>
   </body>
 </html>
