--- a/University of advancing techonology/about.html
+++ b/University of advancing techonology/about.html
@@ -35,6 +35,62 @@
         <li><a href="about.html">About</a></li>
       </ul>
     </nav>
-    <div class=></div>
+    <div class="aboutheader">
+      <h1>About University of Advancing Technology</h1>
+    </div>
+    <div class="about">
+      <div class="abouttext">
+        <br />
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae,
+          accusantium quae numquam repellendus adipisci at repudiandae dicta
+          molestias cupiditate tempora optio facilis consectetur, laudantium
+          necessitatibus repellat, unde eos! Aperiam sed cum unde nam eius est
+          suscipit sit iure nulla! Veniam porro fuga consequatur pariatur
+          recusandae necessitatibus, ipsum error nostrum vero perferendis illum
+          culpa voluptatem suscipit voluptas eos dolore perspiciatis et
+          reprehenderit aut exercitationem. Assumenda voluptatum ipsam veniam
+          illum delectus aliquam ab eligendi minus? Vero harum, voluptates at
+          sed repellendus error ut ratione laborum natus sunt, voluptate itaque,
+          omnis culpa! Nulla odio quia similique amet. Deserunt dicta debitis
+          alias quis consequatur sapiente, vero vitae vel, suscipit quisquam
+          omnis doloremque porro corrupti! Quisquam laudantium a unde dolorem
+          explicabo minima officia dolores est. Sequi adipisci commodi aut ut
+          obcaecati, tempore quaerat eaque doloremque architecto dolor alias
+          neque consequatur illum culpa enim magni dicta sit veniam. Odit modi
+          aspernatur impedit quisquam eum saepe tempore.
+        </p>
+      </div>
+      <div class="aboutimg">
+        <img
+          class="aimg"
+          src="https://images.unsplash.com/photo-1462536943532-57a629f6cc60?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1052&q=80"
+        />
+      </div>
+    </div>
+    <footer>
+      <div class="infofooter">
+        <div>Request info</div>
+        <br />
+        <div>(800) 658-5744</div>
+        <br />
+        <div><a href="admissions.html">Apply to UAT</a></div>
+        <br />
+      </div>
+      <div class="some">
+        <a href="https://www.facebook.com/" target="_blank">
+          <i class="fab fa-facebook"></i
+        ></a>
+        <a href="https://twitter.com/twitter" target="_blank"
+          ><i class="fab fa-twitter"></i
+        ></a>
+        <a href="https://www.instagram.com" target="_blank"
+          ><i class="fab fa-instagram"></i
+        ></a>
+        <a href="https://www.youtube.com" target="_blank"
+          ><i class="fab fa-youtube"></i
+        ></a>
+      </div>
+    </footer>
   </body>
 </html>
