--- a/University of advancing techonology/join-us.html
+++ b/University of advancing techonology/join-us.html
@@ -66,5 +66,29 @@
         </label>
       </div>
     </div>
+    <footer>
+      <div class="infofooter">
+        <div>Request info</div>
+        <br />
+        <div>(800) 658-5744</div>
+        <br />
+        <div><a href="admissions.html">Apply to UAT</a></div>
+        <br />
+      </div>
+      <div class="some">
+        <a href="https://www.facebook.com/" target="_blank">
+          <i class="fab fa-facebook"></i
+        ></a>
+        <a href="https://twitter.com/twitter" target="_blank"
+          ><i class="fab fa-twitter"></i
+        ></a>
+        <a href="https://www.instagram.com" target="_blank"
+          ><i class="fab fa-instagram"></i
+        ></a>
+        <a href="https://www.youtube.com" target="_blank"
+          ><i class="fab fa-youtube"></i
+        ></a>
+      </div>
+    </footer>
   </body>
 </html>
