--- a/about.html
+++ b/about.html
@@ -5,7 +5,7 @@
     <meta name="description" content="" />
     <title>University of advancing techonology</title>
 
-    <link rel="stylesheet" href="design.css/style.css" />
+    <link rel="stylesheet" href="/style.css" />
     <link
       href="https://fonts.googleapis.com/css2?family=Staatliches&display=swap"
       rel="stylesheet"
